--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ src="https://www.facebook.com/tr?id=1401970241474162&ev=PageView&noscript=1"
 
    
 <div class="button2">
-      <a href="https://t.me/+_Olq7O_nmnQ4MDc1" class="button" >
+      <a href="https://t.me/+V5Mcaf4dahg1NDU9" class="button" >
         SUBSCRIBE SHASHWAT 🔥 [ 2022 ]™ <i class="fa fa-telegram" aria-hidden="true"></i></a>
     </div>
 
@@ -118,4 +118,5 @@ document.onkeydown = function(e) {
 
 </body>
 </html>
+
 
